# AI-Resume-Analyzer

./: .env.example.txt  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.observability.yml  docker-compose.yml  nhap.py  requirements.txt
.github/workflows/: ci.yml
.ipynb_checkpoints/: AI_Powered_Resume_Analyzer-checkpoint.ipynb  LinkedIn_scraper_with_Selenium-checkpoint.ipynb  app-Copy1-checkpoint.py
POLICIES/: PRIVACY.md  SCRAPING_POLICY.md
ai-resume-linkedin-analyzer/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
ai-resume-linkedin-analyzer/.github/workflows/: ci.yml
ai-resume-linkedin-analyzer/app/: config.py  main.py
ai-resume-linkedin-analyzer/app/components/: __init__.py  job_card.py  resume_preview.py  score_gauge.py  sidebar.py
ai-resume-linkedin-analyzer/app/pages/: 1_🔍_LinkedIn_Scraper.py  2_📄_Resume_Analyzer.py  3_🎯_Job_Matching.py  4_📊_Dashboard.py
ai-resume-linkedin-analyzer/app/utils/: __init__.py  formatters.py  session_state.py  validators.py
ai-resume-linkedin-analyzer/config/: logging_config.py
ai-resume-linkedin-analyzer/docker/: Dockerfile.api  Dockerfile.streamlit
ai-resume-linkedin-analyzer/docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md
ai-resume-linkedin-analyzer/scripts/: init_db.py  seed_data.py
ai-resume-linkedin-analyzer/src/ai_analyzer/: llm_client.py  prompt_templates.py  resume_analyzer.py
ai-resume-linkedin-analyzer/src/database/: __init__.py  db_manager.py  job_repository.py  resume_repository.py
ai-resume-linkedin-analyzer/src/extractors/: __init__.py  education_extractor.py  experience_extractor.py  skill_extractor.py  text_cleaner.py
ai-resume-linkedin-analyzer/src/matching/: embeddings.py  job_matcher.py  ranking_algorithm.py  similarity_scorer.py  vector_store.py
ai-resume-linkedin-analyzer/src/models/: __init__.py  analysis_result.py  job.py  match_result.py  resume.py
ai-resume-linkedin-analyzer/src/parsers/: __init__.py  base_parser.py  docx_parser.py  image_parser.py  parser_factory.py  pdf_parser.py  txt_parser.py
ai-resume-linkedin-analyzer/src/scraper/: __init__.py  anti_detection.py  browser_manager.py  job_parser.py  linkedin_scraper.py  selectors.py
ai-resume-linkedin-analyzer/tests/: conftest.py
ai-resume-linkedin-analyzer/tests/integration/: test_analysis_flow.py
ai-resume-linkedin-analyzer/tests/unit/: test_parsers.py
configs/: scraper.yml
evaluation/: evaluate_extraction.py  evaluate_matching.py
flows/: ingest_flow.py
functions/: linkedin_scraper.py  resume_analyzer.py
notebooks/.ipynb_checkpoints/: AI_Powered_Resume_Analyzer-checkpoint.ipynb  LinkedIn_scraper_with_Selenium-checkpoint.ipynb
observability/: prometheus.yml
scripts/: build_faiss_index.py  generate_fake_processed.py  ingest_sample.py  monitor_report.py  query_index.py  rotate_monitoring.sh  run_ingest_flow.py
src/ai_resume_analyzer/api/: main.py
src/ai_resume_analyzer/api/routes/: analyze.py  health.py  search.py
src/ai_resume_analyzer/embeddings/: encoder.py  faiss_index.py
src/ai_resume_analyzer/monitoring/: collector.py  drift_detector.py
src/ai_resume_analyzer/scoring/: simple_score.py
src/ai_resume_analyzer/scraper/: base.py  playwright_linkedin.py
src/ai_resume_analyzer/train/: register_model.py
src/parsers/: __init__.py  docx_parser.py  factory.py  ocr_parser.py  pdf_parser.py  utils.py
tests/: test_api_health.py  test_embeddings.py  test_faiss_index.py  test_parsers.py  test_scraper_interface.py  test_smoke.py
